--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,7 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <!--<color name="textColorPrimary">#ffffff</color>-->
-    <!--<color name="textColorSecondary">#ffffff</color>-->
-    <!--<color name="background">#555555</color>-->
+    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="colorBackground">#000000</color>
 </resources>
