--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fagments.SavedNewsFragment">
 
-    <GridView
-        android:id="@+id/Gridview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:numColumns="3"/>
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/swipeView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
