--- a/app/src/main/res/layout/saved_item.xml
+++ b/app/src/main/res/layout/saved_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/savedIamge"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:contentDescription="@string/home"/>
+        android:contentDescription="@string/home"
+        android:src="@drawable/ic_menu_save"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textViewTitle"
+            android:id="@+id/savedTitle"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginStart="10dp"
@@ -26,7 +26,7 @@
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/textViewPubDate"
+            android:id="@+id/savedPubDate"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
