--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -32,11 +32,11 @@
                 android:id="@+id/nav_story"
                 android:icon="@drawable/ic_menu_story"
                 android:title="@string/your_story" />
+            <!--TODO 6: Tạo link đến trang đăng ký-->
             <item
-                android:id="@+id/menu_refresh"
-                app:showAsAction="never"
-                android:title="@string/menu_refresh"
-                android:icon="@drawable/ic_menu_refresh"/>
+                android:id="@+id/nav_auth"
+                android:icon="@drawable/ic_menu_auth"
+                android:title="@string/auth" />
         </menu>
     </item>
 </menu>
