--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="textColorPrimary">#000000</color>
     <color name="colorBackground">#FFFFFF</color>
+    <color name="light_gray">#F0F0F0</color>
 </resources>
