--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -15,7 +15,8 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
@@ -24,9 +25,10 @@
             android:id="@+id/name_post"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="4dp"
-            android:text="Tran Van Huong"
+            android:text="Trần Văn Hưởng"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -35,6 +37,7 @@
 
         <Spinner
             android:id="@+id/category_post"
+            style="@android:style/Widget.Material.Spinner.Underlined"
             android:layout_width="wrap_content"
             android:layout_height="28dp"
             android:layout_marginStart="4dp"
@@ -48,8 +51,9 @@
             android:id="@+id/category_prompt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
             android:text="Chuyên mục:"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/avatar_post"
@@ -61,7 +65,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="@android:color/transparent"
             android:ems="10"
@@ -70,6 +73,7 @@
             android:inputType="textMultiLine"
             android:maxHeight="300dp"
             android:textColor="@android:color/black"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/avatar_post" />
@@ -81,8 +85,20 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Pick Image"
+            android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_post" />
+            app:layout_constraintTop_toBottomOf="@+id/image_pin" />
+
+        <ImageView
+            android:id="@+id/image_pin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/input_post"
+            tools:srcCompat="@tools:sample/avatars" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
