replace listview to recyclerview

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -7,10 +7,10 @@
     tools:context=".PostActivity"
     >
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/listPost"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:divider="@null"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
