--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -40,10 +40,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/avatar_comment"
-            app:layout_constraintTop_toBottomOf="@+id/name_comment" />
+            app:layout_constraintTop_toBottomOf="@+id/name_post" />
 
         <TextView
-            android:id="@+id/name_comment"
+            android:id="@+id/name_post"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="14dp"
