--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -69,10 +69,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/avatar" />
 
-        <android.support.v4.view.ViewPager
+        <com.example.naviapplication.util.wrapContentViewPager
             android:id="@+id/imagePost"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:maxHeight="100dp"
             android:scaleType="fitCenter"
