--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorPrimary">@android:color/darker_gray</item>
         <item name="android:textColorSecondary">@android:color/holo_blue_dark</item>
+        <item name="android:statusBarColor">#000000</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
