--- a/app/src/main/res/drawable/comment_button.xml
+++ b/app/src/main/res/drawable/comment_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#0078FF" />
+    <solid android:color="@color/colorPrimary" />
     <corners
         android:bottomLeftRadius="30dp"
         android:topLeftRadius="30dp"
