--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#4285F4</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#2A58A3</color>
+    <color name="colorAccent">#4285F4</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="colorBackground">#000000</color>
 </resources>
