--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fagments.SavedNewsFragment">
+    tools:context=".fragments.SavedNewsFragment">
 
     <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/swipeView"
