--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -14,4 +14,10 @@
         <item name="android:textColorSecondary">@android:color/holo_blue_dark</item>
         <item name="android:statusBarColor">@color/colorPrimary</item>
     </style>
+
+    <!-- Splash Screen theme. -->
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:statusBarColor">@color/colorPrimary</item>
+        <item name="android:windowBackground">@drawable/loading</item>
+    </style>
 </resources>
