--- a/app/src/main/res/drawable/loading.xml
+++ b/app/src/main/res/drawable/loading.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/colorPrimary"/>
-    <item
-        android:left="100dp"
-        android:right="100dp"
-        android:top="210dp"
-        android:width="200dp"
-        android:height="200dp"
-        >
+    <item>
         <bitmap
+            android:gravity="center"
             android:src="@mipmap/icon" />
     </item>
 </layer-list>
