--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -12,8 +12,10 @@
         android:id="@+id/listComment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="#FFFFFF"
         android:divider="@null"
         android:scrollbars="none"
+        android:elevation="0.5dp"
         app:layout_constraintBottom_toTopOf="@+id/inputCmt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -32,6 +34,7 @@
         android:hint="@string/inputHint"
         android:inputType="textShortMessage|textLongMessage|textMultiLine|textPersonName"
         android:padding="15dp"
+        android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
