--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -1,113 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     tools:context=".AddPostActivity">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent">
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/avatar_post"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars"
+        android:layout_marginLeft="16dp" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/avatar_post"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+    <TextView
+        android:id="@+id/name_post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
+        android:text="Tran Van Huong"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/avatar_post"
+        app:layout_constraintTop_toTopOf="@+id/avatar_post" />
 
-        <TextView
-            android:id="@+id/name_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="4dp"
-            android:text="Tran Van Huong"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/avatar_post"
-            app:layout_constraintTop_toTopOf="@+id/avatar_post" />
+    <Spinner
+        android:id="@+id/category_post"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:layout_marginStart="4dp"
+        android:background="@drawable/category"
+        android:entries="@array/category_arrays"
+        android:gravity="center"
+        android:spinnerMode="dropdown"
+        app:layout_constraintBottom_toBottomOf="@+id/category_prompt"
+        app:layout_constraintStart_toEndOf="@+id/category_prompt"
+        app:layout_constraintTop_toTopOf="@+id/category_prompt"
+        android:layout_marginLeft="4dp" />
 
-        <Spinner
-            android:id="@+id/category_post"
-            android:layout_width="wrap_content"
-            android:layout_height="28dp"
-            android:layout_marginStart="4dp"
-            android:background="@drawable/category"
-            android:entries="@array/category_arrays"
-            android:gravity="center"
-            android:spinnerMode="dropdown"
-            app:layout_constraintBottom_toBottomOf="@+id/category_prompt"
-            app:layout_constraintStart_toEndOf="@+id/category_prompt"
-            app:layout_constraintTop_toTopOf="@+id/category_prompt" />
+    <TextView
+        android:id="@+id/category_prompt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
+        android:text="Chuyên mục:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/avatar_post"
+        app:layout_constraintTop_toBottomOf="@+id/name_post" />
 
-        <TextView
-            android:id="@+id/category_prompt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="4dp"
-            android:text="Chuyên mụccc:"
-            android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/avatar_post"
-            app:layout_constraintTop_toBottomOf="@+id/name_post" />
+    <EditText
+        android:id="@+id/input_post"
+        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@android:color/transparent"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="Viết bài đăng"
+        android:inputType="textMultiLine"
+        android:maxHeight="300dp"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/avatar_post" />
 
-        <EditText
-            android:id="@+id/input_post"
-            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:background="@android:color/transparent"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="Viết bài đăng"
-            android:inputType="textMultiLine"
-            android:maxHeight="300dp"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/avatar_post" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/imageAddPost"
+        android:layout_width="0dp"
+        android:layout_height="400px"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/input_post" >
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/imageAddPost"
-            android:layout_width="0dp"
-            android:layout_height="400px"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_post" />
+    </android.support.v7.widget.RecyclerView>
 
-        <Button
-            android:id="@+id/picker"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:background="@drawable/pick_image_btn"
-            android:drawableStart="@mipmap/pickimage"
-            android:stateListAnimator="@null"
-            android:text="Chọn ảnh"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="#000000"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            android:drawableLeft="@mipmap/pickimage" />
-
-    </android.support.constraint.ConstraintLayout>
-</ScrollView>
+    <com.example.naviapplication.IconButton
+        android:id="@+id/picker"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:background="@drawable/pick_image_btn"
+        android:gravity="center"
+        android:stateListAnimator="@null"
+        android:text="Chọn ảnh"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        app:iconPadding="10dp"
+        app:iconSize="24dp"
+        app:iconSrc="@mipmap/pickimage"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+</android.support.constraint.ConstraintLayout>
