--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -44,11 +44,11 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:background="@drawable/input"
+        android:stateListAnimator="@null"
         android:text="Đăng"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#0078FF"
+        android:textColor="#4F4285F4"
         android:textSize="16sp"
-        android:stateListAnimator="@null"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listComment"
